Fixed delete button alignment when edit button is not visible.

--- a/web-app/tds/web-app/css/elements/component/task-comment-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-comment-component.sass
@@ -27,11 +27,10 @@
   .single-right-btn-action
     text-align: right
     margin-right: 3px
-
 .k-grid-ignore-click
-  -webkit-column-count: 2
-  .btn-1
-    grid-column: 1
-  .btn-2
-    grid-column: 1
+  display: inline-grid
+  grid-template-columns: 70px 70px
+  margin-bottom: 5px
+  [hidden]
+    visibility: hidden
 
